<resources>
    <string name="app_name">Rent</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="save">save</string>
    <string name="connection_not_available">Connection is not available</string>

    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="inbox">Inbox</string>
    <string name="account">Account</string>
    <string name="empty_result">Data is empty</string>
    <string name="rent">Rent</string>
    <string name="close">Close</string>
    <string name="store">Store</string>
    <string name="become_a_lender">Become a lender</string>
    <string name="list_your_product">List your product</string>
    <string name="settings">Settings</string>
    <string name="get_help">Get help</string>
    <string name="give_us_feedback">Give us feedback</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="view_and_edit_profile">View and edit profile</string>
    <string name="menu">More</string>
    <string name="explore">Explore</string>
    <string name="products">Products</string>
    <string name="booking">Booking</string>
    <string name="delivery">Delivery</string>
    <string name="reviews">Reviews</string>
    <string name="filter">Filter</string>

    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="delete_messages">Are you sure to delete <b>%1$s</b> ?</string>
    <string name="product_name">Product name</string>
    <string name="sku">SKU</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="photos">Photos</string>
    <string name="descriptions">Descriptions</string>
    <string name="add_photo">Add photo</string>
    <string name="set_category">Set Category</string>
    <string name="category">Category</string>
    <string name="available">Available</string>
    <string name="commission">Commission</string>
    <string name="select_a_category">Select a category</string>
    <string name="search_by_name">Search by name</string>
</resources>
