<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/home_menu"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

    <item
            android:id="@+id/favorite_menu"
            android:icon="@drawable/ic_love"
            android:title="@string/favorite" />

    <item
            android:id="@+id/subscriptions_menu"
            android:icon="@drawable/ic_subscriptions"
            android:title="@string/rent" />

    <item
            android:id="@+id/inbox_menu"
            android:icon="@drawable/ic_mail"
            android:title="@string/inbox" />

    <item
            android:id="@+id/account_menu"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/account" />
</menu>