<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="id.rent.android.model.Product"/>

        <import type="java.util.List"/>

        <import type="id.rent.android.model.Profile"/>

        <variable
                name="profile"
                type="Profile"/>

        <variable
                name="products"
                type="List&lt;Product>"/>

    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

        <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="@drawable/circle"
                android:layout_width="80dp"
                android:layout_height="80dp">

            <ImageView
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_user"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    tools:ignore="ContentDescription"/>

        </RelativeLayout>

        <TextView
                android:id="@+id/tv_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/profile"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.SemiBold20"
                tools:text="Profile"/>

        <TextView
                android:text="@string/view_and_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textColor="#888"
                android:layout_gravity="center_horizontal"/>

        <RelativeLayout
                android:id="@+id/store"
                android:padding="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:visibleGone="@{profile.stores.size != 0}">

            <ImageView
                    android:layout_marginRight="20dp"
                    android:id="@+id/icon_store"
                    android:src="@drawable/ic_briefcase"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    tools:ignore="ContentDescription"
                    android:layout_marginEnd="20dp"/>

            <TextView
                    android:layout_toRightOf="@id/icon_store"
                    android:id="@+id/tv_store"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/store"
                    android:textAppearance="@style/TextAppearance.SemiBold18"
                    android:layout_toEndOf="@id/icon_store"
                    tools:ignore="RelativeOverlap"/>

            <ImageView
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_chevron_right"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    tools:ignore="ContentDescription"
                    android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/notifications"
                android:padding="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:visibleGone="@{profile.stores.size != 0}">

            <ImageView
                    android:layout_marginRight="20dp"
                    android:id="@+id/icon_notifications"
                    android:src="@drawable/ic_bell"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    tools:ignore="ContentDescription"
                    android:layout_marginEnd="20dp"/>

            <TextView
                    android:layout_toRightOf="@id/icon_notifications"
                    android:id="@+id/tv_notifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notifications"
                    android:textAppearance="@style/TextAppearance.SemiBold18"
                    android:layout_toEndOf="@id/icon_notifications"
                    tools:ignore="RelativeOverlap"/>

            <ImageView
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_chevron_right"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    tools:ignore="ContentDescription"
                    android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <!--<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="Invite friends"
                android:textAppearance="@style/TextAppearance.SemiBold18" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="Refer a seller"
                android:textAppearance="@style/TextAppearance.SemiBold18" /> -->

        <RelativeLayout
                android:id="@+id/become_lender"
                android:padding="16dp"
                app:visibleGone="@{profile.stores.size == 0}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_marginRight="20dp"
                    android:id="@+id/icon_dollar"
                    android:src="@drawable/ic_dollar_sign"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    tools:ignore="ContentDescription"
                    android:layout_marginEnd="20dp"/>

            <TextView
                    android:id="@+id/tv_become_a_lender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/become_a_lender"
                    android:layout_toRightOf="@id/icon_dollar"
                    android:textAppearance="@style/TextAppearance.SemiBold18"
                    android:layout_toEndOf="@id/icon_dollar"
                    tools:ignore="RelativeOverlap"/>

            <ImageView
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_chevron_right"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    tools:ignore="ContentDescription"
                    android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/list_your_product"
                android:padding="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:visibleGone="@{products == null}">

            <ImageView
                    android:id="@+id/icon_clip"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_paperclip"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="20dp"
                    tools:ignore="ContentDescription"/>

            <TextView
                    android:id="@+id/tv_list_your_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_your_product"
                    android:layout_toRightOf="@id/icon_clip"
                    android:textAppearance="@style/TextAppearance.SemiBold18"
                    android:layout_toEndOf="@id/icon_clip"
                    tools:ignore="RelativeOverlap"/>

            <ImageView
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_chevron_right"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    tools:ignore="ContentDescription"
                    android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/settings"
                android:padding="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/icon_setting"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_settings"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="20dp"
                    tools:ignore="ContentDescription"/>

            <TextView
                    android:id="@+id/tv_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:layout_toRightOf="@id/icon_setting"
                    android:textAppearance="@style/TextAppearance.SemiBold18"
                    android:layout_toEndOf="@id/icon_setting"
                    tools:ignore="RelativeOverlap"/>

            <ImageView
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_chevron_right"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    tools:ignore="ContentDescription"
                    android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <View
                android:layout_margin="16dp"
                android:background="#D4D4D4"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/get_help"
                android:textAppearance="@style/TextAppearance.SemiBold18"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/give_us_feedback"
                android:textAppearance="@style/TextAppearance.SemiBold18"/>

        <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/logout"
                android:textAppearance="@style/TextAppearance.SemiBold18"/>

    </LinearLayout>

</layout>