<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="id.rent.android.model.Product"/>

        <variable
                name="product"
                type="Product"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.activity.FormProductActivity">

        <LinearLayout
                android:id="@+id/action_bar"
                android:background="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                <ImageView
                        android:id="@+id/close"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:src="@drawable/ic_close"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        tools:ignore="ContentDescription"/>

                <ImageView
                        android:id="@+id/delete"
                        app:visibleGone="@{product != null}"
                        android:layout_toLeftOf="@id/save"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="32dp"
                        android:src="@drawable/ic_trash"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_toStartOf="@id/save"
                        tools:ignore="ContentDescription"
                        android:layout_marginEnd="32dp"
                        android:layout_marginStart="10dp"/>

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/save"
                        app:backgroundTint="@color/theme_blue"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/save"
                        android:textAllCaps="false"
                        android:padding="0dp"
                        android:textSize="12sp"
                        android:layout_width="60dp"
                        android:layout_height="45dp"
                        android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <EditText
                    android:id="@+id/name"
                    android:layout_marginBottom="12dp"
                    android:layout_marginLeft="54dp"
                    android:layout_marginRight="10dp"
                    android:background="@null"
                    android:hint="@string/product_name"
                    android:text="@{product.name}"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="54dp"
                    tools:ignore="Autofill"
                    android:layout_marginEnd="10dp"/>

        </LinearLayout>

        <RelativeLayout
                app:layout_constraintTop_toBottomOf="@id/action_bar"
                android:id="@+id/container_sku"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                tools:layout_editor_absoluteY="92dp">

            <ImageView
                    android:id="@+id/icon_sku"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_file_text"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    tools:ignore="ContentDescription"/>

            <TextView
                    android:layout_toRightOf="@+id/icon_sku"
                    android:text="@string/sku"
                    android:textAppearance="@style/TextAppearance.Regular12"
                    android:layout_marginLeft="16dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@+id/icon_sku"/>

            <EditText
                    android:textAlignment="textEnd"
                    android:id="@+id/sku"
                    android:layout_centerVertical="true"
                    android:inputType="text"
                    android:layout_alignParentRight="true"
                    android:hint="@string/sku"
                    android:text="@{product.sku}"
                    android:textAppearance="@style/TextAppearance.Regular12"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    tools:ignore="Autofill,RelativeOverlap"
                    android:gravity="end"/>

        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/container_brand"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_marginTop="1dp"
                app:layout_constraintTop_toBottomOf="@+id/container_sku"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="46dp">

            <ImageView
                    android:id="@+id/icon_brand"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_list"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    tools:ignore="ContentDescription"/>

            <TextView
                    android:layout_toRightOf="@+id/icon_brand"
                    android:text="@string/brand"
                    android:textAppearance="@style/TextAppearance.Regular12"
                    android:layout_marginLeft="16dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@+id/icon_brand"/>

            <EditText
                    android:textAlignment="textEnd"
                    android:id="@+id/brand"
                    android:layout_centerVertical="true"
                    android:inputType="text"
                    android:layout_alignParentRight="true"
                    android:hint="@string/brand"
                    android:text="@{product.brand}"
                    android:textAppearance="@style/TextAppearance.Regular12"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    tools:ignore="Autofill,RelativeOverlap"
                    android:gravity="end"/>

        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/container_description"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_marginTop="1dp"
                app:layout_constraintTop_toBottomOf="@+id/container_brand"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="46dp">

            <ImageView
                    android:id="@+id/icon_description"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_align_left"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    tools:ignore="ContentDescription"/>

            <TextView
                    android:layout_toRightOf="@+id/icon_description"
                    android:text="@string/descriptions"
                    android:textAppearance="@style/TextAppearance.Regular12"
                    android:layout_marginLeft="16dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@+id/icon_description"/>

            <EditText
                    android:textAlignment="textEnd"
                    android:id="@+id/descriptions"
                    android:layout_centerVertical="true"
                    android:inputType="text"
                    android:layout_alignParentRight="true"
                    android:hint="@string/descriptions"
                    android:text="@{product.description}"
                    android:textAppearance="@style/TextAppearance.Regular12"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    tools:ignore="Autofill,RelativeOverlap"
                    android:gravity="end"/>

        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/container_price"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_marginTop="1dp"
                app:layout_constraintTop_toBottomOf="@+id/container_description"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="46dp">

            <ImageView
                    android:id="@+id/icon_price"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_dollar_sign"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    tools:ignore="ContentDescription"/>

            <TextView
                    android:layout_toRightOf="@+id/icon_price"
                    android:text="@string/price"
                    android:textAppearance="@style/TextAppearance.Regular12"
                    android:layout_marginLeft="16dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@+id/icon_price"/>

            <EditText
                    android:id="@+id/price"
                    android:layout_centerVertical="true"
                    android:inputType="number"
                    android:layout_alignParentRight="true"
                    android:hint="@string/price"
                    android:textAlignment="textEnd"
                    android:text="@{String.valueOf(product.price)}"
                    android:textAppearance="@style/TextAppearance.Regular12"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    tools:ignore="Autofill,RelativeOverlap"
                    android:gravity="end"/>

        </RelativeLayout>

        <LinearLayout
                app:layout_constraintTop_toBottomOf="@+id/container_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:orientation="vertical">

            <RelativeLayout
                    android:id="@+id/container_photo"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/container_description"
                    android:layout_width="match_parent"
                    android:layout_height="46dp">

                <ImageView
                        android:id="@+id/icon_photo"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_image"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        tools:ignore="ContentDescription"/>

                <TextView
                        android:layout_toRightOf="@+id/icon_photo"
                        android:text="@string/photos"
                        android:textAppearance="@style/TextAppearance.Regular12"
                        android:layout_marginLeft="16dp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@+id/icon_photo"/>

                <TextView
                        android:layout_alignParentRight="true"
                        android:text="@string/add_photo"
                        android:textAppearance="@style/TextAppearance.Regular12"
                        android:layout_marginLeft="16dp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_alignParentEnd="true"
                        tools:ignore="RelativeOverlap"/>

            </RelativeLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>